fix: use hidden instead of clip so it works on ios

--- a/ckanext/nhm/theme/assets/less/multisearch.less
+++ b/ckanext/nhm/theme/assets/less/multisearch.less
@@ -599,7 +599,7 @@
     & a {
       width: 100%;
       display: inline-block;
-      overflow-x: clip;
+      overflow-x: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
     }
